greeeting-container completo

--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
                 <li><a href="#">Projetos</a></li>
                 <li><a href="#">Contatos</a></li>
             </ul>
-        </header>       
+        </header>
+        <div class = "greeting">
+            <section class = "greeting-container">
+                <div>
+                    <h3>Welcome</h3>
+                    <h2>Olá meu nome é Rafael Antonny</h2>
+                    <p>eu sou um programador full-stack</p>
+                    <p>sobre mim</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="16" viewBox="0 0 28 16" fill="none">
+                    <path d="M1 1L14 14.5L27 1" stroke="white"/>
+                    </svg>
+                </div>
+            </section>
+        </div>
     </body>
 </html>
