--- a/index.html
+++ b/index.html
@@ -7,30 +7,68 @@
         <link href="css/style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&family=Quicksand&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Quicksand&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header class = "header-container">
-        <h1>Rafael.Dev</h1>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Projetos</a></li>
-                <li><a href="#">Contatos</a></li>
-            </ul>
+        <header>
+            <div class = "header-container">
+                <h1>Rafael.Dev</h1>
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#">Projetos</a></li>
+                        <li><a href="#">Contatos</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
-        <div class = "greeting">
-            <section class = "greeting-container">
+        <section id = "home">
+            <div class = "greeting-container">
                 <div>
                     <h3>Welcome</h3>
                     <h2>Olá meu nome é Rafael Antonny</h2>
                     <p>eu sou um programador full-stack</p>
                     <p>sobre mim</p>
                     <svg xmlns="http://www.w3.org/2000/svg" width="28" height="16" viewBox="0 0 28 16" fill="none">
-                    <path d="M1 1L14 14.5L27 1" stroke="white"/>
+                        <path d="M1 1L14 14.5L27 1" stroke="white"/>
                     </svg>
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
+        <section id="about">
+            <div class = "container">
+                <div>
+                    <h2>Sobre</h2>
+                </div>
+                <div class="grid">
+                    <div class="left-content">
+                        <h3>Quem sou eu</h3>
+                        <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet.
+                            Nisi anim cupidatat excepteur officia. 
+                            Reprehenderit nostrud nostrud ipsum Lorem est aliquip amet voluptate voluptate dolor minim nulla est proident. 
+                            Nostrud officia pariatur ut officia. 
+                            Sit irure elit esse ea nulla sunt ex occaecat reprehenderit commodo officia dolor Lorem duis laboris cupidatat officia voluptate. 
+                            Culpa proident adipisicing id nulla nisi laboris ex in Lorem sunt duis officia eiusmod. 
+                            Aliqua reprehenderit commodo ex non excepteur duis sunt velit enim. 
+                            Voluptate laboris sint cupidatat ullamco ut ea consectetur et est culpa et culpa duis.
+                        </p>
+                    </div>
+                    <div class="right-content">
+                        <h3>Habilidades</h3>
+                        <div class="grid">
+                            <div class="skill"><p>CSS</p></div>
+                            <div class="skill"><p>HTML</p></div>
+                            <div class="skill"><p>JavaScript</p></div>
+                            <div class="skill"><p>Java</p></div>
+                        </div>
+                    </div>       
+                </div>
+        </section>
+        <section id="projects">
+            <div class = "container">
+                <h2>Projetos</h2>
+            </div>
+        </section>
     </body>
 </html>
