criação da seção dos projetos

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
         </section>
         <section id="about">
             <div class = "container">
-                <div>
-                    <h2>Sobre</h2>
-                </div>
+                <div><h2>Sobre</h2></div>
                 <div class="grid">
                     <div class="left-content">
                         <h3>Quem sou eu</h3>
@@ -67,7 +65,24 @@
         </section>
         <section id="projects">
             <div class = "container">
-                <h2>Projetos</h2>
+                <div><h2>Projetos</h2></div>
+                <div class = "projects-container">
+                    <div class="project">
+                        <img src="./images/preview.gif" alt="pulsating red oni">
+                        <h3>Projeto 1</h3>
+                        <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+                    </div>
+                    <div class="project">
+                        <img src="./images/preview.gif""alt="pulsating red oni">
+                        <h3>Projeto 2</h3>
+                        <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+                    </div>
+                    <div class="project">
+                        <img src="./images/preview.gif" alt="pulsating red oni">
+                        <h3>Projeto 3</h3>
+                        <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+                    </div>
+                </div>
             </div>
         </section>
     </body>
