--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <h1>Rafael.Dev</h1>
                 <nav>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Sobre</a></li>
-                        <li><a href="#">Projetos</a></li>
-                        <li><a href="#">Contatos</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">Sobre</a></li>
+                        <li><a href="#projects">Projetos</a></li>
+                        <li><a href="#contacts">Contatos</a></li>
                     </ul>
                 </nav>
             </div>
@@ -81,6 +81,37 @@
                         <img src="./images/preview.gif" alt="pulsating red oni">
                         <h3>Projeto 3</h3>
                         <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="contacts">
+            <div class = "container">
+                <div>
+                    <h2>Contatos</h2>
+                    <h3>Venha Conversar Comigo</h3>
+                </div>
+                <div class="grid">
+                    <div class left-content>
+                        <form>
+                            <h3>Nome</h3>
+                            <input type="text" name="nome" placeholder="Seu Nome" required>
+                            <h3>E-mail</h3>
+                            <input type="email" name="emial" placeholder="Seu E-mail" required>
+                            <h3>Mensagem</h3>
+                            <textarea placeholder="Digite sua Mensagem" required></textarea>
+                            <button type="submit">Enviar</button>
+                        </form>
+                    </div>
+                    <div class="right-content">
+                        <h3>Informações</h3>
+                        <p>Email: rafaelantonny6@gmail.com</p>
+                        <p>Telefone: +55 94206942</p>
+                        <h3>Redes Sociais</h3>
+                        <div>
+                            <a href="https://github.com/RafaelAntonny"><img src="./images/github-mark/github-mark.png" alt=""></a>
+                            <a href="https://www.linkedin.com/in/rafael-antonny-dev/"><img src="./images/LinkedIn-Logos/LI-In-Bug.png" alt=""></a>
+                        </div>
                     </div>
                 </div>
             </div>
